              ning, it's just tidier now.
            - Bugfix: if the user used binning on a file with time as inde-
              pendent variable but phase was selected (or if phases in a
              file weren't on the [-0.5, 0.5] interval, PHOEBE segfaulted.
              These values are now simply discarded.
            - Temperature range limits were too strict - lower limit has
              been reduced from 3500K to 500K.
2004-11-01: - PHOEBE has been precompiled and packaged under Debian stable
              (Woody). The deb package is at your disposal on PHOEBE's
              homepage. The debian/ top-level directory was added to the
              development source, but it won't be submitted to the CVS.
2004-10-29: - PHOEBE crashed when LC was plotted, but the filter wasn't de-
              fined (i.e. set LCNO to 1 and plot the LC as is). The assumed
              values for bandpass-dependent variables are now defaults.
2004-10-28: - If .lco file readout fails on lines giving radii, uninitialized
              values were used in LC Plotting window. Now these values are
              initialized to -1.0 (so that the problem is obvious). Due to
              this bug PHOEBE was reported to crash. Thanks to Ethem Derman
              for pointing this out!
2004-10-21: - Array sizes in WD have been changed to accomodate for Nmax=60
              and 6000 observation points.
            - PHOEBE 0.26 released!
2004-10-12: - The underlaying WD version changed to 2004-09-17, which fixes
              a bug mentioned below. Things should now work well. After some
              testing, a new PHOEBE version will be released.
2004-09-06: - All tabs in phoebe_fortran_routines.f replaced with two spaces.
              This removes the inconsistency with some older FORTRAN compilers.
            - PHOEBE functions for creating LCI and DCI files updated to con-
              form to the new layout of WD version 2004-06-09.