@@ -9,7 +9,8 @@ PHOEBE Project ChangeLog:
               file weren't on the [-0.5, 0.5] interval, PHOEBE segfaulted.
               These values are now simply discarded.
             - Temperature range limits were too strict - lower limit has
-              been reduced from 3500K to 500K.
+              been reduced from 3500K to 500K and upper limit was increased
+              from 50000K to 100000K.
 2004-11-01: - PHOEBE has been precompiled and packaged under Debian stable
               (Woody). The deb package is at your disposal on PHOEBE's
               homepage. The debian/ top-level directory was added to the
